--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
-{
-  "name": "react-app",
+
+{"name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/salimberry/monsters-rolodex.git",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"yarn build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
